--- a/src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
+++ b/src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
@@ -70,26 +70,26 @@
           url: "javascript:",
           items: [
             {
-              name: "image",
+              pattern: "image",
               src: "/images/sample/anthem-video.jpg",
               alt: "Anthem Video"
             },
             {
-              name: "eyebrow",
+              pattern: "eyebrow",
               text: "Video"
             },
             {
-              name: "headline",
+              pattern: "headline",
               tag: "h3",
               size: "large",
               text: "Anthem: Service Desktop"
             },
             {
-              name: "text",
+              pattern: "text",
               text: "Anthem debuts its next-generation service desktop, driving frictionless customer experiences."
             },
             {
-              name: "button",
+              pattern: "button",
               style: "text",
               width: "full",
               itemAlignment: "start",
@@ -110,18 +110,18 @@
         {% include "@bolt/card.twig" with {
           items: [
             {
-              name: "image",
+              pattern: "image",
               src: "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg",
               alt: "2017 Forrester Wave Report"
             },
             {
-              name: "headline",
+              pattern: "headline",
               tag: "h3",
               size: "large",
               text: "2017 Forrester Wave Report"
             },
             {
-              name: "text",
+              pattern: "text",
               text: "Pega cited as a Leader in The Forrester Wave™: Digital Process Automation Software, Q3 2017."
             }
           ]
@@ -226,26 +226,26 @@
           url: "javascript:",
           items: [
             {
-              name: "image",
+              pattern: "image",
               src: "/images/sample/anthem-video.jpg",
               alt: "Anthem Video"
             },
             {
-              name: "eyebrow",
+              pattern: "eyebrow",
               text: "Video"
             },
             {
-              name: "headline",
+              pattern: "headline",
               tag: "h3",
               size: "large",
               text: "Anthem: Service Desktop"
             },
             {
-              name: "text",
+              pattern: "text",
               text: "Anthem debuts its next-generation service desktop, driving frictionless customer experiences."
             },
             {
-              name: "button",
+              pattern: "button",
               style: "text",
               width: "full",
               itemAlignment: "start",
@@ -266,18 +266,18 @@
         {% include "@bolt/card.twig" with {
           items: [
             {
-              name: "image",
+              pattern: "image",
               src: "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg",
               alt: "2017 Forrester Wave Report"
             },
             {
-              name: "headline",
+              pattern: "headline",
               tag: "h3",
               size: "large",
               text: "2017 Forrester Wave Report"
             },
             {
-              name: "text",
+              pattern: "text",
               text: "Pega cited as a Leader in The Forrester Wave™: Digital Process Automation Software, Q3 2017."
             }
           ]
