--- a/src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
+++ b/src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
@@ -2,7 +2,7 @@
 
 {% if image %}
   {% set items = items | default([]) | merge([{
-    "name": "image",
+    "pattern": "image",
     "src": image.src
   }]) %}
 {% endif %}
