--- a/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -8,11 +8,11 @@
         {
           items: [
             {
-              "name": "eyebrow",
+              "pattern": "eyebrow",
               "text": "Customer Retention"
             },
             {
-              "name": "headline",
+              "pattern": "headline",
               "text": "Personalized. Not Creepy.",
               "size": "large"
             }
@@ -21,11 +21,11 @@
         {
           items: [
             {
-              "name": "eyebrow",
+              "pattern": "eyebrow",
               "text": "Sales Effectiveness"
             },
             {
-              "name": "headline",
+              "pattern": "headline",
               "text": "Create Sales Superstars",
               "size": "large"
             }
@@ -34,11 +34,11 @@
         {
           items: [
             {
-              "name": "eyebrow",
+              "pattern": "eyebrow",
               "text": "Operations &amp; IT"
             },
             {
-              "name": "headline",
+              "pattern": "headline",
               "text": "Stop Coding. Start Designing.",
               "size": "large"
             }
@@ -140,21 +140,21 @@
     {
       "items": [
         {
-          "name": "image",
+          "pattern": "image",
           "src": "/images/placeholders/1200x660.jpg"
         },
         {
-          "name": "headline",
+          "pattern": "headline",
           "text": "2017 Forrester Wave Report",
           "size": "large",
           "tag": "h3"
         },
         {
-          "name": "text",
+          "pattern": "text",
           "text": "Pega cited as a Leader in The Forrester Wave™: Digital Process Automation Software, Q3 2017."
         },
         {
-          "name": "button",
+          "pattern": "button",
           "width": "full",
           "text": "Get the report",
           "style": "secondary"
@@ -164,11 +164,11 @@
     {
       "items": [
         {
-          "name": "image",
+          "pattern": "image",
           "src": "/images/sample/anthem-video.jpg"
         },
         {
-          "name": "teaser",
+          "pattern": "teaser",
           "headlines": [
             {
               "type": "headline",
@@ -191,11 +191,11 @@
     {
       "items": [
         {
-          "name": "image",
+          "pattern": "image",
           "src": "/images/sample/artificial-intelligence-image.jpg"
         },
         {
-          "name": "teaser",
+          "pattern": "teaser",
           "headlines": [
             {
               "type": "headline",
@@ -207,7 +207,7 @@
           "buttons": [
             {
               "text": "Learn More About Pega 7",
-              "style": "secondary",
+              "style": "text",
               "url": "www.google.com/pega7",
               "width": "full"
             }
