--- a/src/_patterns/02-components/bolt-card/src/card.twig
+++ b/src/_patterns/02-components/bolt-card/src/card.twig
@@ -33,8 +33,8 @@
       <div class="{{ "#{baseClass}__media" }}">{% spaceless %}
         {% block card_media %}
           {%- if items -%}
-            {% for item in items if item.name == "image" %}
-              {% include "@bolt/" ~ item.name ~ ".twig" with item only %}
+            {% for item in items if item.pattern == "image" %}
+              {% include pattern_template(item.pattern) with item only %}
             {% endfor %}
           {%- endif -%}
         {% endblock %}
@@ -46,8 +46,8 @@
     <{{ contentTag }} class="{{ "#{baseClass}__body" }}">{% spaceless %}
       {% block card_body %}
         {%- if items -%}
-          {% for item in items if item.name != "image" and item.name != "button" %}
-            {% include "@bolt/" ~ item.name ~ ".twig" with item only %}
+          {% for item in items if item.pattern != "image" and item.pattern != "button" %}
+            {% include pattern_template(item.pattern) with item only %}
           {% endfor %}
         {%- endif -%}
       {% endblock card_body %}
@@ -60,7 +60,7 @@
           {%- if items -%}
             {% for item in items if item.name == "button" %}
               <div class="{{ "#{baseClass}__footer-item" }}">
-                {% include "@bolt/" ~ item.name ~ ".twig" with item only %}
+                {% include pattern_template(item.pattern) with item only %}
               </div>
             {% endfor %}
           {%- endif -%}
