WIP: fixing a few bugs from merge

--- a/src/_patterns/01-core/04-elements/elements-all/_elements.all.scss
+++ b/src/_patterns/01-core/04-elements/elements-all/_elements.all.scss
@@ -12,5 +12,6 @@
 @import '@bolt/elements-tables';
 
 hr {
-  opacity: 0.8;
+  opacity: 0.2;
+  border-top-color: var(--bolt-color-border, currentColor);
 }
