--- a/src/_patterns/01-core/04-elements/elements-links/_elements.link.scss
+++ b/src/_patterns/01-core/04-elements/elements-links/_elements.link.scss
@@ -3,5 +3,6 @@
 \* ------------------------------------ */
 
 a {
+  color: var(--bolt-color-primary, bolt-color(indigo, light));
   text-decoration: none;
 }
