--- a/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.twig
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-ui-list/src/ui-list.twig
@@ -34,7 +34,7 @@
             {{ listItem.text }}
           {% elseif listItem.items %}
             {% for item in listItem.items %}
-              {% include "@bolt/" ~ item.name ~ ".twig" with item only %}
+              {% include pattern_template(item.pattern) with item only %}
             {% endfor %}
           {% endif %}
         </li>
