--- a/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -157,7 +157,7 @@
           "pattern": "button",
           "width": "full",
           "text": "Get the report",
-          "style": "secondary"
+          "style": "text"
         }
       ]
     },
@@ -242,10 +242,9 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "http://via.placeholder.com/1146x645"
+            src: "/images/sample/salesforce-v-pega.png"
           } only %}
         {% endcell %}
-
 
         {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
 
