--- a/src/_patterns/02-components/bolt-card/src/card.scss
+++ b/src/_patterns/02-components/bolt-card/src/card.scss
@@ -50,8 +50,8 @@ bolt-card {
   }
 
   &:before {
-    background-color: var(--bolt-color-background); // TODO: needs to map this to theme background color.
-    opacity: 0.8;
+    background-color: var(--bolt-color-background, bolt-color(white)); // TODO: needs to map this to theme background color.
+    opacity: 0.2;
   }
 
   &:after {
@@ -99,9 +99,24 @@ bolt-card {
 .c-bolt-card__footer {
   position: relative;
   display: flex;
-  border-top-width: $bolt-card-border-width;
-  border-top-style: $bolt-card-border-style;
-  border-top-color: $bolt-card-border-color;
+
+  &:before {
+    content: '';
+    border-top-color: var(--bolt-color-border, currentColor);
+    border-top-width: $bolt-card-border-width;
+    border-top-style: solid;
+    opacity: 0.2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    height: 1px;
+  }
+  // border-top-width: ;
+  // border-top-style: $bolt-card-border-style;
+  // border-top-color: $bolt-card-border-color;
+
 }
 
 .c-bolt-card__footer-item {
