--- a/src/_patterns/02-components/bolt-image/src/image.twig
+++ b/src/_patterns/02-components/bolt-image/src/image.twig
@@ -15,26 +15,31 @@
 {% set ratio = ratio | default(true) %}
 
 {# Get a whole number aspect ratio #}
-{% set gcd %}
-  {% include '@bolt/_gcd.twig' with {
-    a: width,
-    b: height
-  } only %}
-{% endset %}
-{% set gcd = gcd | escape %}
-{% if gcd != 0 %}
-  {% set imageHeightRatio = (height / gcd) | round %}
-  {% set imageWidthRatio = (width / gcd) | round %}
-{% else %}
-  {% set imageHeightRatio = 1 %}
-  {% set imageWidthRatio = 1 %}
+{% if width > 0 and height > 0 and ratio == true %}
+  {% set gcd %}
+    {% include '@bolt/_gcd.twig' with {
+      a: width,
+      b: height
+    } only %}
+  {% endset %}
+  {% set gcd = gcd | escape | raw | number_format %}
+  
+  {% if gcd != 0 and height != 0 and width != 0 %}
+    {% set imageHeightRatio = (height / gcd) | round %}
+    {% set imageWidthRatio = (width / gcd) | round %}
+  {% else %}
+    {% set imageHeightRatio = 1 %}
+    {% set imageWidthRatio = 1 %}
+  {% endif %}
 {% endif %}
 
-{% set ext = src|split('.')|last %}
+{% if src %}
+  {% set ext = src|split('.')|last %}
+{% endif %}
 
 {% set placeholderDummySrc = "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" %}
 
-{# macro srcset(srcset, width, path, ext, sizes) #}
+
   {% if srcset == "" and ext != "svg" %}
     {% set path = publicpath(src|split('.' ~ ext)|first) %}
     {% set sizes = globalBoltImageSizes %}
@@ -49,10 +54,7 @@
   {% elseif ext == "svg" %}
     {% set srcset = src %}
   {% endif %}
-{# endmacro #}
-{# import _self as bolt #}
 
-{# Main bolt-image component #}
 {% set attributes = create_attribute(attributes | default([])).addClass('c-bolt-image') %}
 {% set styles = attributes.getAttribute('style') | split(' ') | merge([
   "--aspect-ratio-h: #{height};",
@@ -60,7 +62,7 @@
 ]) %}
 {% set attributes = attributes.setAttribute('style', styles | join(' ')) %}
 
-{# child img tag #}
+
 {% set imgAttributes = create_attribute([]).addClass([
     "c-bolt-image__img",
     lazyload ? "js-lazyload" : "",
@@ -68,6 +70,7 @@
   ])
   .setAttribute('alt', alt)
 %}
+
 
 {% if lazyload %}
   {% set imgAttributes = imgAttributes
@@ -104,12 +107,12 @@
         attributes: attributes
       } %}
         {% block ratio_content %}
-          {{ imagePlaceholder }}
+          {{ ext == "jpg" ? imagePlaceholder : "" }}
           {{ imageTag }}
         {% endblock %}
       {% endembed %}
     {% else %}
-      {{ imagePlaceholder }}
+      {{ ext == "jpg" ? imagePlaceholder : "" }}
       {{ imageTag }}
     {% endif %}
   {% endblock %}
