--- a/src/styles/_components.all.scss
+++ b/src/styles/_components.all.scss
@@ -17,6 +17,7 @@
 @import '@bolt/components-page-footer';
 @import '@bolt/components-site';
 @import '@bolt/components-ordered-list';
+@import '@bolt/components-unordered-list';
 // @import '@bolt/components-chip-list'; // No styles
 // @import '@bolt/components-critical-path'; // No styles
 // @import '@bolt/components-font-loader'; // No styles
