feat: globally updating items to contentItems, iterating on card filtering logic

--- a/src/_patterns/01-core/05-objects/01-lists/bolt-bare-list/src/bare-list.twig
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-bare-list/src/bare-list.twig
@@ -15,7 +15,7 @@
 
   <bolt-bare-list bolt-object>
     <{{ tag }} {{ attributes.addClass(classes) }}>
-      {% for item in items %}
+      {% for item in contentItems %}
         {% set item_attributes = create_attribute(item.attributes|default({})) %}
         <li {{ item_attributes }}>
           {{ item.text }}
