--- a/src/_patterns/01-core/05-objects/01-lists/bolt-inline-list/src/inline-list.twig
+++ b/src/_patterns/01-core/05-objects/01-lists/bolt-inline-list/src/inline-list.twig
@@ -27,10 +27,10 @@
   matrix in matrixOptions ? baseClass ~ "--matrix" : ""
 ] %}
 
-{% if items %}
+{% if contentItems %}
   <bolt-inline-list size="{{ size }}" bolt-object>
     <{{ tag }} {{ attributes.addClass(classes) }}>
-      {% for item in items %}
+      {% for item in contentItems %}
         <li class="{{ "#{baseClass}__item" }}">
           {{ item.text | raw }}
         </li>
