--- a/src/_patterns/02-components/bolt-action-block/src/_action-block.twig
+++ b/src/_patterns/02-components/bolt-action-block/src/_action-block.twig
@@ -33,7 +33,7 @@
     {% if children %}
       {{ children }}
     {% else %}
-      {% for item in items %}
+      {% for item in contentItems %}
         {% include "@bolt/action-block__item.twig" %}
       {% endfor %}
     {% endif %}
