--- a/src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
+++ b/src/_patterns/02-components/bolt-card/demo/card-kitchen-sink.twig
@@ -68,7 +68,7 @@
       } %}
         {% include "@bolt/card.twig" with {
           url: "javascript:",
-          items: [
+          contentItems: [
             {
               pattern: "image",
               src: "/images/sample/anthem-video.jpg",
@@ -108,10 +108,10 @@
         }
       } %}
         {% include "@bolt/card.twig" with {
-          items: [
+          contentItems: [
             {
               pattern: "image",
-              src: "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg",
+              src: "/images/sample/forrester-preview.jpg",
               alt: "2017 Forrester Wave Report"
             },
             {
@@ -224,7 +224,7 @@
       } %}
         {% include "@bolt/card.twig" with {
           url: "javascript:",
-          items: [
+          contentItems: [
             {
               pattern: "image",
               src: "/images/sample/anthem-video.jpg",
@@ -264,10 +264,10 @@
         }
       } %}
         {% include "@bolt/card.twig" with {
-          items: [
+          contentItems: [
             {
               pattern: "image",
-              src: "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg",
+              src: "/images/sample/forrester-preview.jpg",
               alt: "2017 Forrester Wave Report"
             },
             {
