--- a/src/_patterns/02-components/bolt-card/src/card-w-teaser-list.twig
+++ b/src/_patterns/02-components/bolt-card/src/card-w-teaser-list.twig
@@ -21,7 +21,7 @@
 
 
     {% set teaserItems = teaserItems | merge({
-      "items": items
+      "contentItems": items
     }) %}
 
     {% include "@bolt/ui-list.twig" with teaserItems only %}
