--- a/src/_patterns/02-components/bolt-card/src/card.scss
+++ b/src/_patterns/02-components/bolt-card/src/card.scss
@@ -113,10 +113,6 @@ bolt-card {
     display: block;
     height: 1px;
   }
-  // border-top-width: ;
-  // border-top-style: $bolt-card-border-style;
-  // border-top-color: $bolt-card-border-color;
-
 }
 
 .c-bolt-card__footer-item {
@@ -133,9 +129,17 @@ bolt-card {
     width: 100%;
   }
 
-  & + .c-bolt-card__footer-item {
+  & + .c-bolt-card__footer-item:before {
+    display: block;
+    content: '';
+    border-left-color: var(--bolt-color-border, currentColor);
     border-left-width: $bolt-card-border-width;
-    border-left-style: $bolt-card-border-style;
-    border-left-color: $bolt-card-border-color;
+    border-left-style: solid;
+    opacity: 0.2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 100%;
   }
 }
