--- a/src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
+++ b/src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
@@ -113,7 +113,7 @@
         } only %}
       
         {% include "@bolt/chip-list.twig" with {
-          "items": [
+          "contentItems": [
             {
               "text": "First tag",
               "url": "yahoo.com"
