--- a/src/_patterns/02-components/bolt-band/src/band--collection.twig
+++ b/src/_patterns/02-components/bolt-band/src/band--collection.twig
@@ -2,11 +2,11 @@
 {% block band_content %}
     
   {% grid "o-bolt-grid--flex o-bolt-grid--matrix" %}
-    {% for item in items %}
+    {% for item in contentItems %}
       {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
       {# TODO: get length of items to divide into cells #}
         {% block collection_content %}
-          {% include "@bolt/#{layout | default(item.layout) | default('teaser')}.twig" with item only %}
+          {% include pattern_template(pattern ?? item.pattern) with item only %}
         {% endblock %}
       {% endcell %}
     {% endfor %}
