--- a/src/_patterns/02-components/bolt-band/src/band--feature.twig
+++ b/src/_patterns/02-components/bolt-band/src/band--feature.twig
@@ -4,7 +4,7 @@
 
     {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
       {% if primaryTeaser %}
-        {% include "@bolt/teaser.twig" with primaryTeaser only %}
+        {% include pattern_template("teaser") with primaryTeaser only %}
       {% endif %}
     {% endcell %}
 
