--- a/src/_patterns/02-components/bolt-card/src/card.twig
+++ b/src/_patterns/02-components/bolt-card/src/card.twig
@@ -21,8 +21,65 @@
   {% set attributes = attributes.setAttribute("href", url) %}
 {% endif %}
 
-
 {% set _card_footer_block = block('card_footer') %}
+
+
+
+
+{% set _allowedCardHeaderItems = ["image", "video"] %}
+{% set _allowedCardBodyItems = ["eyebrow", "content", "text", "headline", "teaser"] %}
+{% set _allowedCardFooterItems = ["buttons", "link", "button"] %}
+{% set _allowedItems = _allowedCardHeaderItems | merge(_allowedCardBodyItems) | merge(_allowedCardFooterItems) %}
+
+{% set _allowedCollections = ["contentItems"] %} {# array of different arrays that could exist w/ nested content #}
+{% set _items = [] %}
+
+{% for collectionName in _allowedCollections %}
+  {% if _context[collectionName] %}
+    {% for key, item in _context[collectionName] if item.pattern in _allowedItems or key in _allowedItems %}
+      
+      {% if item.buttons %}
+        {% set buttons = item.buttons %}
+        {% for button in buttons %}
+          {% set button = button | merge({
+            "pattern": "button"
+          }) %}
+          {% set _items = _items | merge([button]) %}
+        {% endfor %}
+      
+        {% set item = item | merge({
+          "buttons": null
+        }) %}
+      {% endif %}
+
+      {% set _items = _items | merge([item]) %}
+    {% endfor %}
+  {% endif %}
+{% endfor %}
+
+
+
+{% for key, item in _context if item.pattern in _allowedItems or key in _allowedItems %}
+  {% if key == "teaser" %}
+    {% if item.buttons %}
+      {% for button in item.buttons %}
+        {% set button = button | merge({ "pattern": "button" }) %}
+        {% set _items = _items | merge([button]) %}
+      {% endfor %}
+      {% set item = item | merge({ "buttons": null }) %}
+    {% endif %}
+  {% endif %}
+
+  {% if item.pattern == false %}
+    {% set item = item | merge({
+      "pattern": key
+    }) %}
+  {% endif %}
+  {% set _items = _items | merge([item]) %}
+{% endfor %}
+
+
+
 
 <bolt-card
   theme="{{ theme }}"
@@ -32,11 +89,14 @@
     {% if block('card_media') is not empty %}
       <div class="{{ "#{baseClass}__media" }}">{% spaceless %}
         {% block card_media %}
-          {%- if items -%}
-            {% for item in items if item.pattern == "image" %}
+          {% for key, item in _items if item.pattern in _allowedCardHeaderItems or key in _allowedCardHeaderItems %}
+            {% if item.pattern %}
               {% include pattern_template(item.pattern) with item only %}
-            {% endfor %}
-          {%- endif -%}
+            {% else %}
+              {{ item }}
+            {% endif %}
+            
+          {% endfor %}
         {% endblock %}
       {% endspaceless %}</div>
     {% endif %}
@@ -45,11 +105,16 @@
     {% if block('card_body') is not empty %}
     <{{ contentTag }} class="{{ "#{baseClass}__body" }}">{% spaceless %}
       {% block card_body %}
-        {%- if items -%}
-          {% for item in items if item.pattern != "image" and item.pattern != "button" %}
+        {% for key,item in _items if item.pattern in _allowedCardBodyItems %}
+          {% if item.pattern %}
             {% include pattern_template(item.pattern) with item only %}
-          {% endfor %}
-        {%- endif -%}
+          {% elseif key != "content" %}
+            {% include pattern_template(key) with item only %}
+          {% else %}
+            {{ item }}
+          {% endif %}
+          
+        {% endfor %}
       {% endblock card_body %}
     {% endspaceless %}</{{ contentTag }}>
     {% endif %}
@@ -57,28 +122,24 @@
     {% if block('card_footer') is not empty %}
       <div class="{{ "#{baseClass}__footer" }}">{% spaceless %}
         {% block card_footer %}
-          {%- if items -%}
-          {% if item.pattern == "teaser" and item.buttons %}
-            {% set items = item.buttons %}
-            {% set isTeaser = true %}
-          {% endif %}
-
-
-            {% for item in items if item.pattern == "button" or isTeaser == true %}
-              <div class="{{ "#{baseClass}__footer-item" }}">
-              {% set itemParams = item | merge({
-                itemAlignment: "left"
-              }) %}
-                {% include pattern_template(item.pattern) with itemParams only %}
-              </div>
-            {% endfor %}
-          {%- endif -%}
+        
+          {% for item in _items if item.pattern in _allowedCardFooterItems %}
+            {% set paramOverrides = {
+              itemAlignment: "left",
+              style: "text"
+            } %}
+             <div class="{{ "#{baseClass}__footer-item" }}">
+              {% if item.pattern %}
+                {% set item = item | merge(paramOverrides) %}
+                {% include pattern_template(item.pattern) with item only %}
+              {% else %}
+                {{ item }}
+              {% endif %}
+            </div>
+          {% endfor %}
+         
         {% endblock card_footer %}
       {% endspaceless %}</div>
     {% endif %}
-
-      
-      
-          
   </{{ tag }}>
 </bolt-card>
