--- a/src/_patterns/02-components/bolt-teaser/src/twig/teaser.twig
+++ b/src/_patterns/02-components/bolt-teaser/src/twig/teaser.twig
@@ -1,6 +1,6 @@
 
 
-
+<bolt-teaser>
 {% if eyebrow %}
   {% include "@bolt/eyebrow.twig" with eyebrow only %}
 {% endif %}
@@ -15,8 +15,11 @@
   {% include "@bolt/logo.twig" with logo only %}
 {% endif %}
 
-
 {% block teaser_content %}
+  {% for item in contentItems if item.pattern %}
+    {% include pattern_template(item.pattern) with item only %}
+  {% endfor %}
+  
   {% if content %}
     {% include "@bolt/text.twig" with {
       text: content | striptags,
@@ -25,9 +28,11 @@
   {% endif %}
 {% endblock teaser_content %}
 
+
 {# TODO: only allow max of 2 buttons #}
 {% if buttons %}
   {% for button in buttons %}
-    {% include "@bolt/button.twig" with button only %}
+    {% include pattern_template("button") with button only %}
   {% endfor %}
 {% endif %}
+</bolt-teaser>
