--- a/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -4,9 +4,9 @@
 
   {% set feature_band_content %}
     {% include "@bolt/ui-list.twig" with {
-      items : [
+      contentItems : [
         {
-          items: [
+          contentItems: [
             {
               "pattern": "eyebrow",
               "text": "Customer Retention"
@@ -19,7 +19,7 @@
           ]
         },
         {
-          items: [
+          contentItems: [
             {
               "pattern": "eyebrow",
               "text": "Sales Effectiveness"
@@ -32,7 +32,7 @@
           ]
         },
         {
-          items: [
+          contentItems: [
             {
               "pattern": "eyebrow",
               "text": "Operations &amp; IT"
@@ -135,10 +135,10 @@
 {% embed "@bolt/band--collection.twig" with {
   "theme": "light",
   "size": "medium",
-  "layout": "card",
-  "items": [
+  "contentItems": [
     {
-      "items": [
+      "pattern": "card",
+      "contentItems": [
         {
           "pattern": "image",
           "src": "/images/placeholders/1200x660.jpg"
@@ -162,34 +162,41 @@
       ]
     },
     {
-      "items": [
-        {
-          "pattern": "image",
-          "src": "/images/sample/anthem-video.jpg"
+      "pattern": "card",
+      "image": {
+        "src": "/images/sample/anthem-video.jpg"
+      },
+      "teaser": {
+        "eyebrow": {
+          text: "Article"
         },
-        {
-          "pattern": "teaser",
-          "headlines": [
-            {
-              "type": "headline",
-              "text": "Headline #2",
-              "size": "large"
-            }
-          ],
-          "content": "Simplify and automate to reduce costs and improve agility.",
-          "buttons": [
-            {
-              "text": "Learn More About Pega 7",
-              "style": "secondary",
-              "url": "www.google.com/pega7",
-              "width": "full"
-            }
-          ]
-        }
-      ]
+        "headlines": [
+          {
+            "type": "headline",
+            "text": "Headline #2",
+            "size": "large"
+          }
+        ],
+        "content": "Simplify and automate to reduce costs and improve agility.",
+        "buttons": [
+          {
+            "text": "Learn More",
+            "style": "secondary",
+            "url": "www.google.com/pega7",
+            "width": "full"
+          },
+          {
+            "text": "About Pega",
+            "style": "secondary",
+            "url": "www.google.com/pega7",
+            "width": "full"
+          }
+        ]
+      }
     },
     {
-      "items": [
+      "pattern": "card",
+      "contentItems": [
         {
           "pattern": "image",
           "src": "/images/sample/artificial-intelligence-image.jpg"
