--- a/src/_patterns/02-components/bolt-image/src/gcd.twig
+++ b/src/_patterns/02-components/bolt-image/src/gcd.twig
@@ -9,5 +9,5 @@
 {% else %}
   {% set a = b %}
   {% set b = a % b %}
-  {% include '@bolt/_gcd.twig' %}
+  {% include '@bolt/gcd.twig' %}
 {% endif %}
