--- a/src/_patterns/01-core/05-objects/03-display/bolt-ratio/src/ratio.scss
+++ b/src/_patterns/01-core/05-objects/03-display/bolt-ratio/src/ratio.scss
@@ -30,6 +30,8 @@ bolt-ratio {
       left: 0;
       width: 100%;
       height: 100%;
+      min-width: 100%; // workaround for content w/ hard-coded height & width 
+      min-height: 100%; // workaround for content w/ hard-coded height & width
     }
 
     &:before {
