--- a/src/_patterns/02-components/bolt-band/src/band--feature.twig
+++ b/src/_patterns/02-components/bolt-band/src/band--feature.twig
@@ -4,7 +4,9 @@
 
     {% cell "u-bolt-width-1/1 u-bolt-width-2/3@small" %}
       {% if primaryTeaser %}
-        {% include pattern_template("teaser") with primaryTeaser only %}
+        {% block primary_teaser %}
+          {% include pattern_template("teaser") with primaryTeaser only %}
+        {% endblock primary_teaser %}
       {% endif %}
     {% endcell %}
 
