--- a/src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
+++ b/src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
@@ -1,10 +1,10 @@
 {% extends "@bolt/card.twig" %}
 
 {% if image %}
-  {% set items = items | default([]) | merge([{
-    "pattern": "image",
-    "src": image.src
-  }]) %}
+  {% set image = image | merge({
+    pattern: 'image'
+  }) %}
+  {% set items = items | default([]) | merge([image]) %}
 {% endif %}
 
   
