--- a/src/_patterns/02-components/bolt-chip/src/chip.twig
+++ b/src/_patterns/02-components/bolt-chip/src/chip.twig
@@ -1,26 +1,18 @@
 {# Sample Usage
   {% include "@bolt/chip.twig" with {
     text: "This is a chip",
-    size: "small",            // Optional; Default is `xsmall`.
-    tag: "a",                 // Optional; Default is `span`.
-    url: "http://google.com"  // Required if tag equals `a`.
+    url: "http://google.com"  // Optional; When url is present, tag changes to `a`, otherwise tag would be `span`.
   } only %}
 #}
 
-{% set tags = ["span", "a"] %} {# Available Chip Types #}
+{% set tags = ["span", "a"] %} {# Available Chip Tags #}
 {% set prefix = "c-bolt-" %}
-{% set sizes = [
-  "xsmall",
-  "small",
-  "medium",
-] %} {# Available Chip Sizes #}
 
 {% set attributes = create_attribute(attributes|default({})) %}
 
 
 {% set componentName = "chip" %}
 {% set baseClass = prefix ~ componentName %}
-{% set size = size | default("xsmall") %}
 
 {% if url %}
   {% set tag = "a" %}
@@ -30,9 +22,7 @@
 
 
 {% set classes = [
-  baseClass,
-  size in sizes ? baseClass ~ "--" ~ size : "",
-  style in styles ? baseClass ~ "--" ~ style : ""
+  baseClass
 ] %}
 
 
@@ -41,7 +31,7 @@
 {% endif %}
 
 
-<bolt-chip size="{{ size }}" bolt-component>
+<bolt-chip bolt-component>
   <{{ tag }} {{ attributes.addClass(classes | raw) }}>
     <span class="{{ "#{baseClass}__item-text" }}">{{ text }}</span>
   </{{ tag }}>
