Reference teaser by pattern name in card-w-teaser.twig

--- a/src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
+++ b/src/_patterns/02-components/bolt-card/src/card-w-teaser.twig
@@ -17,7 +17,7 @@
        }) %}
     {% endif %}
 
-    {% include "@bolt/teaser.twig" with cardBodyContent only %}
+    {% include pattern_template('teaser') with cardBodyContent only %}
   {% endif %}
 {% endblock %}
 
